# MS-AI-Bootcamp

./: .gitignore  README.md  custom_network.py  effnet.py  evaluate.py  helper.py  prelude.py  pyproject.toml  resnet.py  train_and_eval.py
Project1_LogisticRegression/: train_and_eval.py
